# highwayhash

./: CMakeLists.txt  README.md
c/: highwayhash_test.c
highwayhash/: benchmark.cc
